--- a/template/main/index.html
+++ b/template/main/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="author" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- App favicon -->
-  <link rel="shortcut icon" href="../assets/images/favicon.ico">
+  <link rel="shortcut icon" href="../assets/img/favicon.ico">
 
   <!-- App css -->
   <link href="../assets/css/config/default/bootstrap.min.css" rel="stylesheet" type="text/css" id="bs-default-stylesheet" />
@@ -248,19 +248,19 @@
                           <td id="tooltips-container">
                             <div class="avatar-group">
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-container="#tooltips-container" data-bs-toggle="tooltip" data-bs-placement="top" title="Mat Helme">
-                                <img src="../assets/images/users/user-1.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-1.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-container="#tooltips-container" data-bs-toggle="tooltip" data-bs-placement="top" title="Michael Zenaty">
-                                <img src="../assets/images/users/user-2.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-2.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-container="#tooltips-container" data-bs-toggle="tooltip" data-bs-placement="top" title="James Anderson">
-                                <img src="../assets/images/users/user-3.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-3.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-container="#tooltips-container" data-bs-toggle="tooltip" data-bs-placement="top" title="Username">
-                                <img src="../assets/images/users/user-5.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-5.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
                             </div>
                           </td>
@@ -294,15 +294,15 @@
                           <td id="tooltips-container1">
                             <div class="avatar-group">
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-container="#tooltips-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Mat Helme">
-                                <img src="../assets/images/users/user-4.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-4.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-container="#tooltips-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Michael Zenaty">
-                                <img src="../assets/images/users/user-1.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-1.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-container="#tooltips-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="James Anderson">
-                                <img src="../assets/images/users/user-6.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-6.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
                             </div>
                           </td>
@@ -336,15 +336,15 @@
                           <td>
                             <div class="avatar-group">
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Mat Helme">
-                                <img src="../assets/images/users/user-9.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-9.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Michael Zenaty">
-                                <img src="../assets/images/users/user-7.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-7.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="James Anderson">
-                                <img src="../assets/images/users/user-3.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-3.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
                             </div>
                           </td>
@@ -378,19 +378,19 @@
                           <td>
                             <div class="avatar-group">
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Mat Helme">
-                                <img src="../assets/images/users/user-1.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-1.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Michael Zenaty">
-                                <img src="../assets/images/users/user-8.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-8.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="James Anderson">
-                                <img src="../assets/images/users/user-2.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-2.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Username">
-                                <img src="../assets/images/users/user-5.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-5.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
                             </div>
                           </td>
@@ -424,11 +424,11 @@
                           <td>
                             <div class="avatar-group">
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Mat Helme">
-                                <img src="../assets/images/users/user-3.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-3.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
 
                               <a href="javascript: void(0);" class="avatar-group-item mb-0" data-bs-toggle="tooltip" data-bs-placement="top" title="Michael Zenaty">
-                                <img src="../assets/images/users/user-10.jpg" class="rounded-circle avatar-xs" alt="friend">
+                                <img src="../assets/img/users/user-10.jpg" class="rounded-circle avatar-xs" alt="friend">
                               </a>
                             </div>
                           </td>
