--- a/template/main/react.html
+++ b/template/main/react.html
@@ -7,6 +7,8 @@
     <meta name="author" content="zlab">
     <meta name="generator" content="zlab">
     <title>ZLab Drive</title>
+    <link rel="shortcut icon" href="/assets/img/favicon.png"/>
+    <link rel="bookmark" href="/assets/img/favicon.png" type="image/x-icon"/>
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
