--- a/template/main/react.html
+++ b/template/main/react.html
@@ -9,7 +9,7 @@
     <title>ZLab Drive</title>
     <link rel="shortcut icon" href="/assets/img/favicon.png"/>
     <link rel="bookmark" href="/assets/img/favicon.png" type="image/x-icon"/>
-    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -51,12 +51,12 @@
     </symbol>
 </svg>
 <div id="root"></div>
-<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/react@17.0.2/umd/react.development.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/react-dom@17.0.2/umd/react-dom.development.js"></script>
+<script src="/assets/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/js/react.production.min.js"></script>
+<script src="/assets/js/react-dom.production.min.js"></script>
 <!-- 生产环境中不建议使用 -->
-<script src="https://cdn.jsdelivr.net/npm/babel-standalone@6.26.0/babel.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="/assets/js/babel.min.js"></script>
+<script src="/assets/js/axios.min.js"></script>
 <script type="text/babel" src="/assets/js/main.js"></script>
 </body>
 </html>
