--- a/template/v1/react.html
+++ b/template/v1/react.html
@@ -9,7 +9,7 @@
     <title>ZLab Drive</title>
     <link rel="shortcut icon" href="/assets/img/favicon.png"/>
     <link rel="bookmark" href="/assets/img/favicon.png" type="image/x-icon"/>
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/v1/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -51,12 +51,12 @@
     </symbol>
 </svg>
 <div id="root"></div>
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/react.production.min.js"></script>
-<script src="/assets/js/react-dom.production.min.js"></script>
+<script src="/assets/v1/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/v1/js/react.production.min.js"></script>
+<script src="/assets/v1/js/react-dom.production.min.js"></script>
 <!-- 生产环境中不建议使用 -->
-<script src="/assets/js/babel.min.js"></script>
-<script src="/assets/js/axios.min.js"></script>
-<script type="text/babel" src="/assets/js/main.js"></script>
+<script src="/assets/v1/js/babel.min.js"></script>
+<script src="/assets/v1/js/axios.min.js"></script>
+<script type="text/babel" src="/assets/v1/js/main.js"></script>
 </body>
 </html>
